RESOLVED FIXED222829
dlopen_preflight is failing (temporarily) but obsolete
https://bugs.webkit.org/show_bug.cgi?id=222829
Summary dlopen_preflight is failing (temporarily) but obsolete
Dean Jackson
Reported 2021-03-05 14:32:27 PST
dlopen_preflight is failing (temporarily) but obsolete
Attachments
Patch (6.38 KB, patch)
2021-03-05 14:37 PST, Dean Jackson
jer.noble: review+
Dean Jackson
Comment 1 2021-03-05 14:37:30 PST
Radar WebKit Bug Importer
Comment 2 2021-03-05 14:37:54 PST
Peng Liu
Comment 3 2021-03-05 14:41:47 PST
Comment on attachment 422422 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=422422&action=review > Source/WTF/ChangeLog:11 > + made sense during the PowerPC to Intel transition, and it is an Nit. s/an/as/g :-)
Dean Jackson
Comment 4 2021-03-06 04:55:48 PST
Note You need to log in before you can comment on or make changes to this bug.